    "Proof" keyword and let the user actively ask for insertion. You
    can customize this behaviour by setting the
    coq-accept-proof-using-suggestion to one of these values: 'always,
    'highlight, 'ask, 'never. This is also settable from Coq menu. See
    documentation of this variable for an explanation of the different
    possible values and some more information.

*** Limited extensibility for indentation 

    Coq indentation mechanism is based on a fixed set of tokens and
    precedence rules. Extensibility is now possible by adding new
    syntax for a given token (no new token can be added). 

    Typical example: if you define a infix operator xor you may
    want to define it as a new syntax for token \/ in order to
    have the indentation rules of or applied to xor.

    Use:
    (setq coq-smie-user-tokens '(("xor" . "\\/")))
    
    The set of tokens can be seen in variable smie-grammar.

*** Indentation of monadic notations.
    Using the extensibility for indentation described above we provide
    a way to define your own monadic operators using the
    coq-smie-monadic-tokens in the same spirit as coq-smie-user-tokens
    above.

    By default two well established syntax are supported:

       x <- e ;;
       e

     and 

       do x <- e ;
       e

*** Clickable Hypothesis in goals buffer to copy/paste hyp names

    Clicking on a hyp name in goals buffer with button 2 copies its
    name at current point position (which should be in the scripting
    buffer). This eases the insertion of hypothesis names in scripts.

*** Folding/unfolding hypothesis

   A cross "-" is displayed to the left of each hypothesis of the
   goals buffer. Clicking ont it (button 1) hides/unhides the
   hypothesis. You can also hit "f" while ont he hypothesis. "F"
   unfolds all hypothesis.
   
   Hide/ unhide status remains when goal changes.

*** Highlighting of hypothesis

    You can highlight hypothesis in goals buffer on a per name